crates/solidity-v2/testing/snapshots/diagnostics_output/structure/redefined_built_in_error/error/generated/solc/0.8.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[SyntaxError 1855] Error: The built-in errors "Error" and "Panic" cannot be re-defined.
   ╭─[input.sol:5:1]
   │
 5 │ error Error(uint256 code);
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯
